fixed overlapping navigation bar

--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,7 @@ nav {
     margin: 10px auto;
     position: relative;
     overflow: hidden;
+    z-index: 12;
  }
  #home .overlay-itro{
     box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2); 
@@ -125,11 +126,9 @@ nav {
      padding: 0;
      height: 90%;
      width: 90%;
-     z-index: 1;
+     z-index: 11;
    }
-   .container{
-    z-index: 10;
-   }
+  
   .hero {
     display: flex;
     align-items: center;
